--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <h1>JokenPô</h1>
 
         <div class="buttons">
-            <button class="but" onclick="chooce(1)" id="rock">&#x1F44A</button>
-            <button class="but" onclick="chooce(2)" id="paper">&#x1F590</button>
-            <button class="but" onclick="chooce(3)" id="scissors">&#x270C</button>
+            <button class="but" onclick="choiceHuman('rock')" id="rock">&#x1F44A</button>
+            <button class="but" onclick="choiceHuman('paper')" id="paper">&#x1F590</button>
+            <button class="but" onclick="choiceHuman('scissors')" id="scissors">&#x270C</button>
         </div>
         
-
+        <P class="result"></P>
         <p class="your-score">Você: <span id="yourScore">0</span></p>
         <p class="machine-score">Alexa: <span id="machineScore">0</span></p>
         <p class="result"></p>
